# example-tensorflow-model-update

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  idf_component.yml  model_handler.c  model_handler.h
models/: model.bin_header_yn  model.bin_header_ynsg
tf_micro_speech/: audio_provider.cc
tf_micro_speech/main/: audio_provider.cc  idf_component.yml  main_functions.cc  main_functions.h  micro_model_settings.h
